ispCP ω 1.0.6 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2010-04-09 Laurent Declercq
	- GUI
		* Fixed: White page after a new installation

2010-04-09 Christian Hernmarck
        - CONFIGS:
                * added var (mta_sasldb_file) to the redhat config
        - TOOLS:
                * added a pma config var to disable the 'DisplayBinaryAsHex' by default

2010-04-09 Jochen Manz
	- GUI:
		* Simplified config handling with singleton class

2010-04-08 Sascha Bay
	- GUI:
		* Fixed #2162: Hide "Subdomain add" and/or "Alias add" from 
			./client/domains_manage.php menu when disabled
		* Fixed #2212: Wrong mail counts at reseller user statistics page
		* Fixed #2329: Reseller statistic shows 0 / 0 of -1 if disabled

2010-04-08 Benedikt Heintel
	- GUI:
		* Fixed #2326: Missing Variable in r2796
	- TOOLS:
		* Updated phpMyAdmin Configuration

2010-04-05 Benedikt Heintel
	- CONFIGS:
		* Added `df` command
	- DISTS:
		* [FreeBSD, OpenBSD]: Added `sysctl`
		* [FreeBSD]: Added `swapctl`
	- GUI:
		* Added SystemInfo class for removed phpSysInfo (part of #2053)
	- TOOLS:
		* Fixed #2324: Grouping Databases in new PMA Theme
		* Renamed ispCP phpMyAdmin Themes
		* Removed phpSysInfo Support (#2307)

2010-04-05 Laurent Declercq
	- GUI:
		* Added missing class `message` in ispcp_orderpanel.css file
		* Added missing term of service field in admin/hosting_plan_add.{php,tpl}
		* Added missing term of service field in admin/hosting_plan_edit.{php,tpl}
		* Added note for the term of service field
		* Changed some system_message() call to set_page_message() (linked to a
			security code regeneration issue) in some order panel files
		* Fixed #2322: Term of Service should be hidden if it was not set for a
			hosting plan
		* Fixed: Order panel - The security code image must be regenerated if
			the code validation was failed

2010-04-04 Laurent Declercq
	- DATABASE:
		* Fixed: Unknown column `tos` after a new install

2010-04-02 Benedikt Heintel
	- DOCS:
		* Changed Ubuntu Update
	- GUI: